# pthread-creation

./: README.md  pthread.c
threads/: Makefile.in  configure  configure.ac
threads/autom4te.cache/: output.0  traces.0  traces.1
threads/src/: Makefile.am  Makefile.in  thread1.c  thread2.c  thread3.c  thread3a.c  thread4.c  thread5.c  thread6.c  thread7.c  thread8.c
