pthread_LDADD = -lpthread
bin_PROGRAMS= pthread thread1 thread2 thread3 thread3a thread4 thread5 thread6
pthread_SOURCES=pthread.c
thread1_SOURCES=thread1.c
thread2_SOURCES=thread2.c
thread3_SOURCES=thread3.c
thread3a_SOURCES=thread3a.c
thread4_SOURCES=thread4.c
thread5_SOURCES=thread5.c
thread6_SOURCES=thread6.c


